--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,16 @@
+header {
+  width: 100%;
+  height: 20vh;
+  padding: 0.5rem;
+  margin: 0;
+}
+
+main {
+  width: 100%;
+  min-height: 80vh;
+  margin: 0;
+}
+
 section {
   width: 700px;
   padding: 20px;
